@@ -11,7 +11,7 @@ namespace Dia {
 	public class PlacementTool : Tool {
  
 		static GLib.Type gtype;
-		object [] attr;
+		object [] properties;
 		Type type;
 
 		static PlacementTool()
@@ -19,33 +19,33 @@ namespace Dia {
 			gtype = RegisterGType (typeof (PlacementTool));
 		}
 
-		public PlacementTool (Type type, params object [] attributes) 
+		public PlacementTool (Type type, params object [] properties) 
 			: base (gtype)
 		{
-			if (attributes.Length % 2 == 1)
-				throw new ArgumentException ("A pair of attributes has only 1 member, it must have 2.");
+			if (properties.Length % 2 == 1)
+				throw new ArgumentException ("A property name does not have a value associated.");
 
-			this.attr = attributes;
+			this.properties = properties;
 			this.type = type;
 
 			ButtonPressEvent += new DiaSharp.ButtonPressEventHandler (ButtonPress);
 		}
 
-		public void ButtonPress (object o, DiaSharp.ButtonPressEventArgs args)
+		void ButtonPress (object o, DiaSharp.ButtonPressEventArgs args)
 		{
 			CanvasItem item = CreateItem();
-			MoveItem (args.View, args.Button, item);
 			args.View.Canvas.Root.Add (item);
-			GrabHandle (args.View, args.Button, item);
+			MoveItem (args.View, args.Button, item);
+			//GrabHandle (args.View, args.Button, item);
 		}
 
 		CanvasItem CreateItem()
 		{
 			CanvasItem item = (CanvasItem) Activator.CreateInstance (type);
 			
-			for (int i = 0; i < attr.Length; i += 2) {
-				item.SetProperty ((string)attr [i], 
-						  new GLib.Value (attr [i + 1]));				
+			for (int i = 0; i < properties.Length; i += 2) {
+				item.SetProperty ((string)properties [i], 
+						  new GLib.Value (properties [i + 1]));				
 			}
 			return item;
 		}
@@ -59,7 +59,41 @@ namespace Dia {
 
 		void GrabHandle (CanvasView view, Gdk.EventButton evnt, CanvasItem item)
 		{
+			if (item is CanvasLine) {
+				/*
+				  wx, wy = view.window_to_world(event.x, event.y)
+				  dist, glue, glue_to = view.canvas.glue_handle (first, wx, wy)
+				  if glue_to and (dist <= view.handle_layer.glue_distance):
+				  glue_to.connect_handle(first)
+				  view.handle_layer.grab_handle(last)
+				*/
 
+				Handle first = null;
+				Handle last = null;
+				bool started = true;
+				foreach (Handle handle in item.Handles) {
+					if (started)
+						first = handle;
+					else
+						last = handle;
+
+					started = false;
+				}
+				view.HandleLayer.GrabHandle (first);
+
+			} else if (item is CanvasElement) {
+				Handle handle_se = null;
+
+				int counter = 0;
+				foreach (Handle handle in item.Handles) {
+					if (counter++ != (int)CanvasElementHandle.Se) {
+						continue;
+					}
+					handle_se = handle;
+				}
+
+				view.HandleLayer.GrabHandle (handle_se);
+			}
 		}
 	}
 }
